--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "watch": "npm run dev -- --watch",
     "start": "npm run watch",
     "prebuild": "npm run clean",
-    "build": "webpack --config webpack/webpack.prod.js"
+    "build": "webpack --config webpack/webpack.prod.js",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
